--- a/templates/definitions_page.mustache
+++ b/templates/definitions_page.mustache
@@ -18,7 +18,7 @@
         {{/definitions}}
     </table>
 
-    <div class="definitions-page-footer">
+    <div class="page-footer">
         <p>
             <button data-href="{{{nexturl}}}" class="continue-button">Continue</button>
             <br/><small>{{mustseealltocontinue}}</small>
