--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,9 @@
     display: block;
 }
 
+.path-mod-flashcards .page-footer {
+    margin-top: 20px;
+}
 .path-mod-flashcards .page-footer p {
     text-align: right;
 }
