Add code logic to support new transition local to complete when skip global is selected

--- a/templates/cards_page.mustache
+++ b/templates/cards_page.mustache
@@ -41,6 +41,11 @@
                 $('.flashcards_timer').css('display', 'none');
                 congrats.css('display', 'block');
 
+                {{#completeafterlocal}}
+                    var redirecturl = "{{{nexturl}}}";
+                    window.location.replace(redirecturl.replace('&amp;','&') + "&globalscattertime=" + timer.getTotalTimeValues().seconds);
+                {{/completeafterlocal}}
+
                 {{#isglobalscatter}}
                     var redirecturl = "{{{nexturl}}}";
                     window.location.replace(redirecturl.replace('&amp;','&') + "&globalscattertime=" + timer.getTotalTimeValues().seconds);
