Make buttons looks slighly better on Boost

--- a/templates/cards_page.mustache
+++ b/templates/cards_page.mustache
@@ -4,7 +4,7 @@
         <div class="congrats">
           <div class="flashcards_congrats">{{{finishedscattermsg}}}</div>
           {{#hascontinue}}
-              <button data-href="{{{nexturl}}}" class="continue-button">{{continue}}</button>
+              <button data-href="{{{nexturl}}}" class="btn btn-primary continue-button">{{continue}}</button>
           {{/hascontinue}}
         </div>
     </div>
