--- a/templates/definitions_page.mustache
+++ b/templates/definitions_page.mustache
@@ -20,7 +20,7 @@
     </div>
     <div class="page-footer">
         <p>
-            <button data-href="{{{nexturl}}}" class="continue-button">Continue</button>
+            <button data-href="{{{nexturl}}}" class="continue-button btn btn-primary">Continue</button>
             <br/><small>{{mustseealltocontinue}}</small>
             <br/><small>{{noteaboutseenforteachers}}</small>
         </p>
