--- a/templates/definitions_page.mustache
+++ b/templates/definitions_page.mustache
@@ -1,3 +1,17 @@
+{{!
+    Terms are organised as follows:
+
+    <div class="term-wrapper">
+        <div class="term">
+            <div class="term-header">
+                <div class="term-title"></div>
+                <div class="term-tick"></div>
+            </div>
+            <div class="term-body"></div>
+        </div>
+    </div>
+
+}}
 <div id="definitions-page-{{uniqid}}">
     <div class="terms clearfix">
         {{#definitions}}<!--
